--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,17 +10,20 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        resConfigs "en", "ru"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "app_name", "FUN"
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
 }
+
